--- a/src/themes/shared/_vars.css
+++ b/src/themes/shared/_vars.css
@@ -129,10 +129,10 @@
 
   /* Navbar */
   --navbar-font-size        : var(--font-size);
-  --navbar-height           : 60px;
+  --navbar-height           : 4em;
   --navbar-link-color       : ;
   --navbar-link-color-active: var(--theme-color);
-  --navbar-link-line-height : 2.5;
+  --navbar-link-line-height : 2;
 
   /* Sidebar */
   --sidebar-bg                   : var(--color-bg);
